# swagger-output.json
@@ -11,15 +11,179 @@
     "http"
   ],
   "paths": {
-    "/": {
+    "/api/menu": {
       "get": {
         "tags": [
-          "Tests"
+          "Products"
         ],
+        "summary": "Obtener todo los productos",
         "description": "",
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/menu/{id}": {
+      "get": {
+        "tags": [
+          "Products"
+        ],
+        "summary": "Obtener un producto por el id",
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "integer",
+            "description": "ID del producto"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "put": {
+        "tags": [
+          "Products"
+        ],
+        "summary": "Actualizar un producto existente",
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "integer",
+            "description": "ID del producto"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "description": "Datos a actualizar",
+            "required": false,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "nombre_producto": {
+                  "type": "string",
+                  "example": "Ceviche de Pescado"
+                },
+                "descripcion": {
+                  "type": "string",
+                  "example": "Pescado fresco con limón y cebolla"
+                },
+                "precio": {
+                  "type": "string",
+                  "example": "22.00"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "202": {
+            "description": "Accepted"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "Products"
+        ],
+        "summary": "Eliminar un producto",
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "integer",
+            "description": "ID del producto a eliminar"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/menu/": {
+      "post": {
+        "tags": [
+          "Products"
+        ],
+        "summary": "crear un nuevo producto",
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "description": "Datos del producto",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "nombre_producto": {
+                  "type": "string",
+                  "example": "Ceviche"
+                },
+                "descripcion": {
+                  "type": "string",
+                  "example": "Pescado fresco con limón"
+                },
+                "precio": {
+                  "type": "string",
+                  "example": "20.50"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
